Mon Jun 12 16:35:26 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * configure.in: generate doc/sv/Makefile as well
  * main/filesdb.c: fix logic when reading statusoverride-file
  * scripts/.cvsignore: add all the perl scripts
  * scripts/dpkg-divert.pl:
    + turn $admindir into $dpkglibdir, which the Makefile will handle
    + fix glob->regexp logic for --list
  * scripts/Makefile.in: 
    + replace one `sed' with `$(SED)'
    + add dpkg-statoverride
  * scripts/dpkg-statoverride.pl: new util to manage statoverrides
  * debian/rules: move Swedish manpages into the package as well

Fri Jun  9 15:52:28 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * Merge things from the potato branch:
    + po/*.po: updated
    + THANKS: Add Lele Gaifax
    + configure.in: add Italian to LINGUAS
    + doc/sv: new directory with Swedish manpages
    + doc/*: removed "GNU/Linux" since this runs on HURD as well
    + doc/ja/update-alternatives.8: new version
    + dpkg-deb/main.c: remove preprocessor define from gettextized string
    + dselect/main.c: remove preprocessor define from gettextized string
    + lib/showcright.c: remove preprocessor define from gettextized string
    + main/enquiry.c: can't use prepocessor defines in a gettextized string
    + dselect/pkgdisplay.cc: Replace empty string for eflags with a space
    + dselect/pkgsublist.cc: mark another string as translateable
    + dselect/pkgtop.cc: change code to reflect that the empty case for
      an eflagstring is now a single space, not an empty string (since
      gettext can't handle empty strings).
    + main/help.c: allocate a bit more space for the path buffer in checkpath()
    + main/main.c: fix location of --abort-after in --help output
    + scripts/debian-changelog-mode.el: fix documentation string for
      debian-changelog-finalise-last
    + scripts/dpkg-source.pl: fix typo
    + scripts/udate-alternatives.8: fixed errors found while Japanese
      translation was made. 