@@ -11,6 +11,7 @@ dpkg (1.7.0) unstable; urgency=low
     actual maintainer. Update the format-version to 1.7 to reflect this.
   * dpkg-genchanges: allow a space between # and a to-be-closed bugnumber
   * dpkg-deb: reorder files when building a package
+  * dpkg-statoverride: new tool to override ownership and modes for files
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
